# whisper-benchmark

./: Dockerfile  README.md  download_whisper_large_v2.py  pyproject.toml  test.py
